<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_escuro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCharacter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_250"
            android:contentDescription="@string/description_image"
            android:scaleType="centerCrop"
            android:src="@drawable/rick_morty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCharacterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCharacter" />

        <TextView
            android:id="@+id/tvCharacterNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/name_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvCharacterName"
            app:layout_constraintTop_toBottomOf="@id/ivCharacter" />

        <TextView
            android:id="@+id/tvCharacterStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="Status:"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterName" />

        <TextView
            android:id="@+id/tvCharacterStatusEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/text_status_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvCharacterName"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterNameEdit" />

        <TextView
            android:id="@+id/tvCharacterSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/text_species"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterStatus" />

        <TextView
            android:id="@+id/tvCharacterSpeciesEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/text_species_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvCharacterSpecies"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterStatusEdit" />

        <TextView
            android:id="@+id/tvCharacterGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/text_genre"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterSpecies" />

        <TextView
            android:id="@+id/tvCharacterGenderEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/text_genre_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/size_15"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tvCharacterSpecies"
            app:layout_constraintTop_toBottomOf="@id/tvCharacterSpeciesEdit" />

        <ImageView
            android:id="@+id/ivFavoriteDetail"
            android:layout_width="@dimen/width_40"
            android:layout_height="@dimen/height_40"
            android:layout_margin="@dimen/margin_16"
            android:foregroundGravity="right"
            android:src="@drawable/ic_star_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCharacter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>